base/1-pipeline/10-pipeline-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pipeline-netpol
spec:
  podSelector:
    matchLabels:
      tekton.dev/pipeline: pipeline
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Egress
